--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "sass": "^1.80.6",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
