--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "jss": "^10.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-jss": "^10.10.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "sass": "^1.80.6",
