--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "jss": "^10.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-jss": "^10.10.0",
     "react-hook-form": "^7.54.2",
+    "react-jss": "^10.10.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "react-scrollbars-custom": "^4.1.1",
     "sass": "^1.80.6",
     "scss": "^0.2.4",
     "tailwind-scrollbar": "^3.1.0",
