--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "jss": "^10.10.0",
